# etsy_scraper

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  GUI_README.md  NEXT_STEPS.md  README.md  TODO.md  WORKFLOW_ANALYSIS.md  gui.py  pyproject.toml  requirements.txt  run_gui.bat  run_gui.py
.claude/: settings.local.json
specs/: REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  module_overview.md  project_overview.md  project_structure.md  setup_guide.md  tech_stack.md
src/etsy_scraper/: __init__.py  cli.py
src/etsy_scraper/config/: __init__.py  etsy_flow_config.py  settings.py
src/etsy_scraper/core/: __init__.py  config.py  scraper.py
src/etsy_scraper/data_management/: __init__.py  csv_manager.py  shop_csv_manager.py
src/etsy_scraper/extractors/: __init__.py  html_parser.py  product_links.py  shop_extractors.py
src/etsy_scraper/models/: __init__.py
src/etsy_scraper/scrapers/: __init__.py  etsy_flow_curl_cffi.py  etsy_template_scraper.py  listing_shop_extractor.py  scraper_main.py  shop_metrics_extractor.py  shop_scraper_main.py
src/etsy_scraper/utils/: __init__.py  logger.py  pagination.py  session.py
tests/: __init__.py  conftest.py  test_refactored.py
tests/integration/: test_pipeline.py
tests/unit/: test_config.py  test_data_manager.py  test_html_parser.py  test_scraper.py
